# root-readspeed

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  ReadSpeed.cxx  ReadSpeed.hxx  ReadSpeedCLI.cxx  ReadSpeedCLI.hxx  ReadSpeedInput.cxx  ReadSpeedInput.hxx  root_readspeed.cxx  root_throughput.cxx
test/: CMakeLists.txt  tests.cpp
